<resources>
    <string name="app_name">Testing</string>
    <string name="read_file_button">GET FILES</string>
    <string name="display">Display</string>
    <string name="file_content_will_appear_here">File content will appear here</string>
    <string name="file_url">https://www.dropbox.com/s/bs7jhzidy1xr86u/Upcoming%20Birthdays.txt?dl=1</string>
    <string name="message_template_url">https://www.dropbox.com/s/zz8rez2xblwdjr2/Message%20Template.txt?dl=1</string>
    <string name="list_link_temp">https://www.dropbox.com/s/olaiwir14y900pw/UpcomingBirthdays.txt?dl=1</string>
    <string name="compose">PREVIEW</string>
    <string name="send">SEND</string>
    <string name="sms_rate">SMS Rate</string>
    <string name="sms_count">number of sms</string>
    <string name="recipient_count">Count of recipients</string>
    <string name="sms_cost">Cost of SMS</string>
    <string name="smsRate">4</string>
    <string name="rate_of_sms">SMS Rate</string>
    <string name="network"></string>
    <string name="carrier">MTN</string>
    <string name="sim_slot">SIM Slot</string>
    <string name="defaultSim">2</string>
</resources>