<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textDisplay"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="480dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="Display2"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/file_content_will_appear_here" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:onClick="getFiles"
        android:text="@string/read_file_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/compose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:text="@string/compose"
        android:onClick="viewMessages"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/send"
        android:onClick="sendMessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/compose"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/unitCost"
        android:layout_width="60dp"
        android:layout_height="43dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/sms_rate"
        android:inputType="numberDecimal"
        android:text="@string/smsRate"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textDisplay"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />


    <EditText
        android:id="@+id/simSlot"
        android:layout_width="60dp"
        android:layout_height="43dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="@string/defaultSim"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textDisplay"
        app:layout_constraintEnd_toStartOf="@+id/networkSelect"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toEndOf="@+id/unitCost"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/networkSelect"
        android:layout_width="90dp"
        android:layout_height="48dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/carrier"
        android:inputType="textPersonName"
        android:text="@string/network"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/textDisplay"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/costLabel"
        android:layout_width="60dp"
        android:layout_height="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="5dp"
        android:text="@string/rate_of_sms"
        android:textAlignment="center"
        android:textSize="12sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/unitCost"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/simSlotLabel"
        android:layout_width="60dp"
        android:layout_height="20dp"
        android:layout_marginBottom="5dp"
        android:text="@string/sim_slot"
        android:textAlignment="center"
        android:textSize="12sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/simSlot"
        app:layout_constraintEnd_toStartOf="@+id/networkLabel"
        app:layout_constraintStart_toEndOf="@+id/costLabel" />

    <TextView
        android:id="@+id/networkLabel"
        android:layout_width="60dp"
        android:layout_height="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="5dp"
        android:text="Carrier"
        android:textAlignment="center"
        android:textSize="12sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/networkSelect"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/display1"
        android:layout_width="370dp"
        android:layout_height="102dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:text="Display1"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/simSlotLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.285"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/compose"
        app:layout_constraintVertical_bias="0.972"
        tools:text="Display1" />

    <EditText
        android:id="@+id/message"
        android:layout_width="375dp"
        android:layout_height="76dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:text="Trying sending text messages."
        app:layout_constraintBottom_toTopOf="@+id/display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Message" />

    <EditText
        android:id="@+id/phoneNumber"
        android:layout_width="236dp"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="08108020030"
        app:layout_constraintBottom_toTopOf="@+id/message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Phone number" />

</androidx.constraintlayout.widget.ConstraintLayout>